# Minecraft-Xbox-360-Decompilation

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  test.cpp
Compiler/: XMsvc.cmake
oldSrc/: Logger.h  Minecraft.cpp  Timer.h
oldSrc/Model/: ModelBase.h  ModelBed.h  ModelBiped.cpp
oldSrc/Network/: Packet.h
oldSrc/Renderer/: ModelRenderer.cpp  ModelRenderer.h
oldSrc/Util/: MathHelper.cpp  Vec3D.cpp
oldSrc/World/: World.h  WorldInfo.cpp
oldSrc/World/Block/: Block.cpp  IBlockAccess.h
oldSrc/World/Block/Material/: Material.h
oldSrc/World/Chunk/: Chunk.h  IChunkProvider.h
oldSrc/World/WorldGen/Biome/: BiomeGenBase.h
oldSrc/World/entity/: Entity.cpp  Entity.h
oldSrc/World/map/: MapCoord.h  MapData.cpp  MapDataBase.h  MapGenBase.h
oldSrc/World/nbt/: NBTTagCompound.h
oldSrc/phys/: AxisAlignedBB.h
src/: CMinecraftApp.cpp  CMinecraftApp.h  DefaultShaders.h  Game.cpp  Game.h  Logger.h  Minecraft.cpp  Minecraft.h  Timer.cpp  main.cpp  shared.h  stdafx.cpp  stdafx.h
src/Block/Material/: MapColor.h  Material.cpp  Material.h
src/Java/Math/: Random.h
src/Model/: ModelBiped.h
src/Network/: Packet.cpp
src/Render/: C4JRender.h  Renderer.cpp  Renderer.h  TU2Shaders.h
src/Util/: AxisAlignedBB.cpp  AxisAlignedBB.h  IProgressUpdate.h  MathHelper.cpp  MathHelper.h  PositionTextureVertex.h  TexturedQuad.h  Vec3D.cpp  Vec3D.h
src/World/: World.cpp  World.h  WorldInfo.h
src/World/Biome/: BiomeGenBase.cpp
src/World/Block/: Block.cpp  Block.h  IBlockAccess.h  StepSound.h
src/World/entity/: Entity.cpp  Entity.h  EntityLiving.h
src/World/map/: MapColor.cpp  MapColor.h  MapCoord.h  MapData.cpp  MapData.h  MapDataBase.h  MapGenBase.h  MapInfo.h
src/World/nbt/: NBTBase.cpp  NBTBase.h  NBTBase.h.txt
src/World/phys/: AABB.cpp  AABB.h  Vec3D.h
